# langextract-vllm

./: .gitignore  LICENSE  README.md  pyproject.toml  test_plugin.py
examples/: usage_example.ipynb
langextract_vllm/: __init__.py  provider.py
langextract_vllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
