[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-vllm"
version = "0.1.0"
description = "LangExtract provider plugin for VLLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["langextract", "vllm", "llm", "nlp", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langextract>=1.0.0",
    "vllm>=0.2.0",
]

[project.entry-points."langextract.providers"]
vllm = "langextract_vllm.provider:VLLMLanguageModel"

[tool.setuptools.packages.find]
where = ["."]
include = ["langextract_vllm*"]
